--- a/app/src/main/res/layout/fragment_rectangle.xml
+++ b/app/src/main/res/layout/fragment_rectangle.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.GalleryFragment">
+    tools:context=".views.fragment.RectangleFragment">
 
     <TextView
-        android:id="@+id/text_gallery"
+        android:id="@+id/text_rectangle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
