--- a/app/src/main/res/layout/fragment_line.xml
+++ b/app/src/main/res/layout/fragment_line.xml
@@ -32,12 +32,17 @@ tools:context=".views.fragment.LineFragment">
 
 <LinearLayout
     android:id="@+id/drawLayout"
-    android:layout_width="350dp"
-    android:layout_height="0dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_margin="32dp"
     android:layout_weight="1"
     android:orientation="vertical" />
 
-
+    <Button
+        android:id="@+id/btnDrawLine"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="@string/draw_line" />
 
 </LinearLayout>
