12-Dec-2020 Draw Line integration

--- a/app/src/main/res/layout/fragment_circle.xml
+++ b/app/src/main/res/layout/fragment_circle.xml
@@ -20,6 +20,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="@string/draw_rectangle" />
+        android:text="@string/draw_circle" />
 
 </LinearLayout>
