--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,10 +8,12 @@
             android:id="@+id/nav_line"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_line" />
+
         <item
-            android:id="@+id/nav_rectangle"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_rectangle" />
+            android:id="@+id/nav_circle"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/menu_circle" />
+
         <item
             android:id="@+id/nav_triangle"
             android:icon="@drawable/ic_menu_slideshow"
@@ -21,5 +23,15 @@
             android:id="@+id/nav_square"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_squre" />
+
+        <item
+            android:id="@+id/nav_rectangle"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/menu_rectangle" />
+
+
+
+
+
     </group>
 </menu>
