--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -28,4 +28,11 @@
         android:name="com.example.androiddemoapp.views.fragment.SquareFragment"
         android:label="@string/menu_squre"
         tools:layout="@layout/fragment_square" />
+
+    <fragment
+        android:id="@+id/nav_circle"
+        android:name="com.example.androiddemoapp.views.fragment.CircleFragment"
+        android:label="@string/menu_circle"
+        tools:layout="@layout/fragment_circle" />
+
 </navigation>
