--- a/app/src/main/res/layout/fragment_rectangle.xml
+++ b/app/src/main/res/layout/fragment_rectangle.xml
@@ -13,7 +13,14 @@
         android:layout_height="match_parent"
         android:layout_margin="32dp"
         android:layout_weight="1"
-        android:orientation="vertical" />
+        android:orientation="vertical" >
+
+    </LinearLayout>
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/btnDrawLine"
