--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -29,6 +29,11 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_rectangle" />
 
+    <item
+            android:id="@+id/nav_map"
+            android:icon="@drawable/ic_map"
+            android:title="@string/menu_map" />
+
 
 
 
