--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -34,5 +34,10 @@
         android:name="com.example.androiddemoapp.views.fragment.CircleFragment"
         android:label="@string/menu_circle"
         tools:layout="@layout/fragment_circle" />
+    <fragment
+        android:id="@+id/nav_map"
+        android:name="com.example.androiddemoapp.views.fragment.MapFragment"
+        android:label="fragment_map"
+        tools:layout="@layout/fragment_map" />
 
 </navigation>
