--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -33,6 +33,10 @@
             android:id="@+id/nav_map"
             android:icon="@drawable/ic_map"
             android:title="@string/menu_map" />
+        <item
+            android:id="@+id/nav_sensor"
+            android:icon="@drawable/ic_map"
+            android:title="@string/menu_sensor" />
 
 
 
